--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   },
   "dependencies": {
     "@fontsource/lexend-deca": "^5.2.5",
+    "@mui/icons-material": "^6.4.7",
+    "@mui/material": "^6.4.7",
     "@shadcn/ui": "^0.0.4",
     "bootstrap": "^5.3.3",
     "react": "^19.0.0",
@@ -18,6 +20,7 @@
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.2.0",
     "recharts": "^2.15.1",
+    "styled-components": "^6.1.15",
     "vite-project": "file:"
   },
   "devDependencies": {
