--- a/package.json
+++ b/package.json
@@ -15,12 +15,14 @@
     "@mui/material": "^6.4.7",
     "@shadcn/ui": "^0.0.4",
     "bootstrap": "^5.3.3",
+    "firebase": "^11.4.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.2.0",
     "recharts": "^2.15.1",
     "styled-components": "^6.1.15",
+    "sweetalert2": "^11.17.2",
     "vite-project": "file:"
   },
   "devDependencies": {
