--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@mui/icons-material": "^6.4.7",
     "@mui/material": "^6.4.7",
     "@shadcn/ui": "^0.0.4",
+    "antd": "^5.24.3",
     "bootstrap": "^5.3.3",
     "firebase": "^11.4.0",
     "react": "^19.0.0",
