--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "antd": "^5.24.3",
     "bootstrap": "^5.3.3",
     "firebase": "^11.4.0",
+    "lucide-react": "^0.482.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
