--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "antd": "^5.24.3",
     "bootstrap": "^5.3.3",
     "firebase": "^11.4.0",
+    "jspdf": "^3.0.1",
+    "jspdf-autotable": "^5.0.2",
     "lucide-react": "^0.482.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
@@ -23,7 +25,8 @@
     "recharts": "^2.15.1",
     "styled-components": "^6.1.15",
     "sweetalert2": "^11.17.2",
-    "vite-project": "file:"
+    "vite-project": "file:",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
