--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@fontsource/lexend-deca": "^5.2.5",
+    "@lottiefiles/dotlottie-react": "^0.13.3",
     "@shadcn/ui": "^0.0.4",
     "antd": "^5.24.3",
     "bootstrap": "^5.3.3",
