--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.2.0",
+    "react-speech-recognition": "^4.0.0",
     "recharts": "^2.15.1",
     "styled-components": "^6.1.15",
     "sweetalert2": "^11.17.2",
